# agentC

./: .gitignore  AI_START_HERE.md  PROJECT_AST.json  PROJECT_AST.md  PROJECT_SKELETON.txt  README.md  agentc-cli  commit.sh  dashboard.html  dashboard.html.tmp  dotfiles_backup_design.md  git_commit.sh  pyproject.toml  requirements.txt
agentc/: __init__.py  bugbounty_dashboard.py  cli.py  config.py  dashboard.py  engine.py  events.py  logsetup.py  math_utils.py  models.py  scheduler.py  service.py  store.py  variables.py  watcher.py
agentc/actions/: __init__.py  agent_action.py  base.py  python_action.py  registry.py  shell.py
agentc/agents/: __init__.py  adapters.py  base.py
bugbounty/: DESIGN_SIMPLE_SPIDERS.md  README.md
bugbounty/scripts/: ai_spider.py  batch_crawler.py  check_body_patterns.py  check_critical.py  create_domain_state.py  create_initial_requests.py  dedup_check.py  enqueue_wordlist.py  extract_dom_links.py  extract_script_endpoints.py  generate_sitemap.py  perform_http_request.py  pipeline_config.py  probe_critical_paths.py  queue_pump.py  rate_limit_orchestrator.py  run_spider_trigger.py  run_subfinder.py  trigger_sub_task.py  trigger_subfinder.py
bugbounty/wordlists/: common_paths.txt  critical_body_regex_patterns.txt  critical_paths.txt  critical_paths.txt.bak  top100_common_paths.txt
configs/agents/: code-review.json  researcher.json  (+3 more)
logs/: engine.out
scripts/: finalize_to_completed.py  install_service.sh  render_dashboard.py
state/: engine.json  engine.pid  events.jsonl  variables.json
subfinder/: config.yaml  provider-config.yaml
(+23 files in other folders)
